<resources>
    <string name="app_name">GossipWars</string>
    <string name="title_activity_in_game">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username_action">Change username</string>
    <string name="username">Username</string>
    <string name="username_message">"Your current username is "</string>
    <string name="textview">username_info</string>
    <string name="create_game">Create lobby</string>
    <string name="lobby_hint">Lobby name</string>
    <string name="round_length">Round length</string>
    <string name="players">players</string>
    <string name="create_room">Create</string>
    <string name="rooms_available">Rooms</string>
    <string name="join">Join</string>
    <string name="title_actions">Actions</string>
    <string name="title_overview">Overview</string>
    <string name="title_chat">Chat</string>
    <string name="title_map">Map</string>
    <string name="vote_yes">Yes</string>
    <string name="vote_no">No</string>
    <string name="add_alliance">Add alliance</string>
    <string name="add_chat">Add chat</string>
    <string name="join_chip">Join</string>
    <string name="kick_chip">Kick</string>
    <string name="attack_chip">Attack</string>
    <string name="defend_chip">Defend</string>
    <string name="initiate_proposals">Initiate proposals</string>
    <string name="other_actions_and_requests">Other actions and requests</string>
    <string name="negotiate_chip">Negotiate</string>
    <string name="round_bonus">Round bonus</string>
    <string name="army_size">Army size</string>
    <string name="defense">Defense</string>
    <string name="enter_desired_increase">Enter desired increase</string>
    <string name="enter_alliance_name">Enter alliance name</string>
    <string name="select_alliance">Select alliance</string>
    <string name="select_player">Select player</string>
    <string name="select_upgrade_option">Select upgrade option</string>

    <string-array name="game_length_array">
        <item>20s</item>
        <item>60s</item>
        <item>90s</item>
        <item>120s</item>
    </string-array>

    <string-array name="nr_players_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="title_activity_messenger">MessengerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quit_alliance">Quit</string>
    <string name="type_your_message">Type your message…</string>
    <string name="reply">Reply</string>
    <string name="join_proposals">Join proposals (%d)</string>
    <string name="kick_proposals">Kick proposals (%d)</string>
    <string name="attack_proposals">Attack proposals (%d)</string>
    <string name="defense_proposals">Defense proposals (%d)</string>
    <string name="negotiate_proposals">Negotiate proposals (%d)</string>
    <string name="your_proposals">Your proposals (%d)</string>
    <string name="view">View</string>
    <string name="select_alliance_for_help">Select alliance for help</string>
    <string name="select_region_to_attack">Select region to attack</string>
    <string name="select_region_to_defend">Select region to defend</string>
    <string name="region_info_helper">You can move troops to this region from a neighbor region selected by below if you want. Select done if you want this action or close otherwise.</string>
    <string name="no_soldiers_text">You have no soldiers in this region</string>
    <string name="attack_this_region">You can attack this region with your soldiers that are already there</string>
    <string name="attack">Attack</string>
    <string name="how_many_soldiers_to_move">How many soldiers to move?</string>
    <string name="cant_attack">You can\'t attack this region</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="warning_vote_dialog">All proposals will be voted when you select done. If you don\'t want this, select cancel</string>
    <string name="bar_title">%s %s</string>
    <string name="bar_title_alert"><![CDATA[
%s <font color=#FF4444>%s</font>
    ]]></string>
    <string name="room_start">Start</string>
    <string name="room_join">Join</string>
    <string name="round_seconds">%ss</string>
    <string name="room_players">%s/%s</string>
    <string name="navigation_drawer_open">nav drawer open</string>
    <string name="navigation_drawer_closed">nav drawer closed</string>
    <string name="how_to_play">How to play</string>
    <string name="title_activity_how_to_play">ScrollingActivity</string>
    <string name="intro_text">
        "GossipWars is a peer-to-peer game where each player receives regions on a map and an "
        "army and the purpose is to gain other territories and neutralize other players's armies"
        "The game consists of rounds of length set at room creation. During a round, each player "
        "can do one of the following actions:\n"
        "\u25BA move soldiers from a populated region to a neighboring region\n"
        "\u25BA attack a region occupied by another player\n"
        "\u25BA create alliances\n"
        "\u25BA chat with other players inside an alliance\n"
        "\u25BA create proposals (join / kick / defend / attack) that must be voted by players "
        "from the chosen alliance to take action\n"
        "\u25BA vote proposals made by allies\n"
        "\u25BA negotiate with other players\n"
        "\u25BA take round bonus\n"
    </string>
    <string name="room_screen_text">
        "When the app starts, it looks for other devices to connect through bluetooth. When it "
        "finds an device, a dialog will appear for requesting pairing. In order to pair,"
        "select accept option.\nNow you or the other players can create rooms by setting the name,"
        "round length and max number of players. The game will start when the room host clicks "
        "start. All players that joined will enter the game."
    </string>
    <string name="map_actions_text">
        "When the game starts, map's regions will be shared between players. Each player has at "
        "beginning an army of 100k soldiers, with 50xp attack and defense and a region assigned "
        "as capital. Map regions will have "
        "a color to distinguish owners.\nActions can be taken when clicking on a region.You can "
        "attack a region only if you have soldiers in that region. Same condition applies for "
        "moving soldiers in that region from a neighbor one."
    </string>
    <string name="chat_tab_text">
        "At beginning there are no alliances.When creating an alliance you must select the first "
        "member(excepting yourself) and a name. Now you can select one of the alliances you belong "
        "to read messages and chat with the other allies"
    </string>
    <string name="overview_tab_text">
        "At the end of every round players will send their actions and the game state will update."
        "To figure out what happened you can view the content of overview tab, where each fight,"
        "negotiation and troop moving will be displayed."
    </string>
    <string name="actions_tab_text">
        "In this tab you can make proposals and vote the proposals made by other players."
        "In order to do a proposal you must belong to at least an alliance.\nFor join and kick "
        "actions to take action you must get majority from allies votes. For defense and attack "
        "proposals all players that voted yes will help the proposal initiator during the attack."
        "Helping means that their soldiers in that region will attack / defend together"
        "(damage will sum up and loss will be split proportionally).\nYou can also take your round"
        " bonus if you have a capital and send negotiate proposals to other players."
    </string>
    <string name="action_settings">Settings</string>
    <string name="intro">Intro</string>
    <string name="map_actions">Map actions</string>
    <string name="chat_tab">Chat tab</string>
    <string name="room_screen">Room screen</string>
    <string name="overview_tab">Overview tab</string>
    <string name="actions_tab">Actions tab</string>
    <string name="no_soldiers_in_neighbors">You have no soldiers in neighboring regions</string>
    <string name="surrender">Surrender</string>

</resources>