<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_negotiate_layout"
    >

    <RadioGroup
        android:id="@+id/playersToRequestGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


    </RadioGroup>

    <View
        android:id="@+id/dividerArmyRequest"
        android:layout_width="1dp"
        android:layout_height="729dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/armyOptionsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dividerArmyRequest"
        app:layout_constraintTop_toTopOf="parent" >


        <RadioButton
            android:id="@+id/armySizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/army_size" />

        <RadioButton
            android:id="@+id/armyAttackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attack" />

        <RadioButton
            android:id="@+id/armyDefenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defense" />

    </RadioGroup>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/armyRequestTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_desired_increase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dividerArmyRequest"
        app:layout_constraintTop_toBottomOf="@id/armyOptionsGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/armyInputText"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>